<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/expense_type_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textHeaderMail"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/expense_type_button"
        android:layout_width="146dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/expense_button"
        android:fontFamily="@font/avenir"
        android:text="@string/expense_type_selector"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textHeaderMail"
        app:layout_constraintTop_toBottomOf="@+id/method_button" />

    <EditText
        android:id="@+id/editTextExpenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/expense_desc"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/exp_symbolIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/exp_symbolIv" />

    <EditText
        android:id="@+id/editTextExpenseAmounth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/expense_count"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/exp_count_symbolIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exp_count_symbolIv"
        app:layout_constraintTop_toTopOf="@+id/exp_count_symbolIv" />

    <ImageView
        android:id="@+id/exp_symbolIv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_fatura_iconu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exp_count_symbolIv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_para_birimi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exp_symbolIv" />

    <TextView
        android:id="@+id/textHeaderMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/payer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exp_count_symbolIv" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/partition_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textHeaderMail"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderMail" />

    <Button
        android:id="@+id/payer_button"
        android:layout_width="146dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:background="@drawable/expense_button"
        android:fontFamily="@font/avenir"
        android:text="@string/payer_selector"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textHeaderMail"
        app:layout_constraintStart_toEndOf="@+id/textHeaderMail"
        app:layout_constraintTop_toTopOf="@+id/textHeaderMail" />

    <Button
        android:id="@+id/method_button"
        android:layout_width="146dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/expense_button"
        android:fontFamily="@font/avenir"
        android:text="@string/equal_sharing"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/expense_type_button"
        app:layout_constraintStart_toEndOf="@+id/textHeaderMail"
        app:layout_constraintTop_toBottomOf="@+id/payer_button" />

    <Button
        android:id="@+id/saveExpenseButton"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button2"
        android:fontFamily="@font/avenir"
        android:text="@string/save"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/camera_button"
        android:padding="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/editTextExpenseName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextExpenseName"
        app:layout_constraintTop_toTopOf="@+id/editTextExpenseName"
        app:srcCompat="@drawable/ic_camera" />

    <Button
        android:id="@+id/noteButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/calendar_button"
        android:drawableLeft="@drawable/ic_noun_note"
        android:fontFamily="@font/avenir"
        android:text="@string/note"
        android:textSize="15dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarButton" />

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/calendar_button"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        android:fontFamily="@font/avenir"
        android:text="@string/calendar"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_type_button" />

</androidx.constraintlayout.widget.ConstraintLayout>