...

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/remove_friend_linear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:visibility="invisible"
                            android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/removeFriendButton"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_remove_user"
                            android:src="@drawable/ic_remove_user"
                            android:layout_marginHorizontal="40dp" />

...
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mygroup_bottomRL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.6"
            android:background="@color/white"
            android:gravity="center">

...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/recycler_viewRL2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:paddingEnd="18dp"
                android:translationZ="90dp">

                <ImageView
                    android:id="@+id/add_expense"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/add_expense_btn" />
            </RelativeLayout>

...
