...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/groupOperations_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/friend_background_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/friend_frame"
                android:layout_width="70dp"
...
